[package]
name = "restart-controller"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.11"
eyre = "0.6.5"
futures = "0.3.17"
# k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
# kube = "0.61.0"
# kube-runtime = "0.61.0"
serde_json = "1.0.71"
serde_yaml = "0.8.21"
snafu = "0.6.10"
tokio = { version = "1.12.0", features = ["full"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git" }
tracing = "0.1.29"
